# multi-source-lakeshouse-pipeline

./: .env.example  .gitignore  PROJECT_GUIDELINE.md  README.md  pyproject.toml
IA_DECISIONS/: 2026-03-17_001_escopo_fase_inicial.md  2026-03-17_002_organizacao_repositorio.md  2026-03-17_003_estrategia_ambiente.md  2026-03-17_004_modelagem_configuracao.md  2026-03-17_005_inicializacao_spark.md  2026-03-17_006_resiliencia_dependencias_locais.md  2026-03-17_007_execucao_local_sem_atrito.md  2026-03-23_019_quality_gate_e_alerta_operacional.md  2026-03-23_020_gold_consume_silver_persistida.md  2026-03-23_021_gold_kpis_temporais_e_conversao.md
configs/: base.yml
dags/: sales_medallion_pipeline.py
docs/: architecture.md  execution_guide.md
infra/: docker-compose.yml
scripts/: alert_sales_quality.py  bootstrap_storage.py  build_sales_gold.py  build_sales_silver.py  check_sales_quality.py  load_sales_bronze.py  sync_sales_sources.py
tests/: __init__.py  support.py  test_airflow_dag_module.py  test_bronze_behavior.py  test_bronze_config.py  test_bronze_edge_cases.py  test_dummyjson_client.py  test_gold_behavior.py  test_gold_edge_cases.py  test_gold_persistence.py  test_gold_service.py  test_logging.py  test_orchestration_behavior.py  test_orchestration_edge_cases.py  test_quality_behavior.py  test_quality_gate_behavior.py  test_sales_batches.py  test_sales_edge_cases.py  test_sales_exports.py  test_sales_normalize.py  test_sales_sync_service.py  test_settings.py  test_silver_behavior.py  test_silver_persisted_loading.py  test_silver_persistence.py  (+3 more)
(+29 files in other folders)
