[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-source-lakehouse-pipeline"
version = "0.1.0"
description = "Pipeline Lakehouse multi-fonte para portfólio de engenharia de dados."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Renato" }
]
dependencies = [
  "delta-spark==3.2.0",
  "psycopg2-binary==2.9.10",
  "pydantic==2.11.2",
  "pydantic-settings==2.8.1",
  "PyYAML==6.0.2",
  "pyspark==3.5.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-cov==6.0.0",
  "ruff==0.11.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -p no:cacheprovider --basetemp=./logs/pytest_tmp"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
